# zdppy_api

./: .gitignore  pyproject.toml
examples/fastapi/: file_path.py  query_parameter.py  z01_hello.py  z02_path_parameter.py  z03_enum.py  z04_file_path.py  z05_query_parameter.py  z06_optional_parameter.py  z07_query_parameter_type.py  z08_path_and_query_parameter.py  z09_required_parameter.py  z10_require_default_and_optional.py  z11_request_body.py  z12_item_dict.py  z13_request_body_and_path_parameter.py  z14_query_validation.py  z15_regex_validation.py  z16_default_value.py  z17_required_value.py  z18_query_list.py  z19_query_title_description.py  z20_query_alias.py  z21_deprecating.py  z22_exclude_for_openapi.py  z23_path_parameter_title.py  z24_path_and_query.py  z25_num_validation.py  z26_path_query_and_body.py  z27_multi_body.py  z28_singer_value_in_body.py  z29_query_and_multi_body.py  z30_embed_single_parameter.py  z31_body_field.py  z32_nested_model.py  z33_set_param.py  z34_sub_model.py  z35_url_type.py  z36_list_of_submodels.py  z37_deeply_nested_models.py  z38_attribute_list.py  (+45 more)
examples/fastapi_apps/: sql_app.db
examples/zdppy_fastapi/: apirouter.py  cors.py  health.py  middleware.py  path_parameter.py  upload.py  z01_common_result.py
zdppy_api/: __init__.py  applications.py  concurrency.py  datastructures.py  exception_handlers.py  middlewares.py  param_functions.py  requests.py  response.py  responses.py  routing.py  templating.py  utils.py  websockets.py
zdppy_api/dependencies/: models.py  utils.py
zdppy_api/fastapi/: __init__.py  applications.py  (+8 more)
(+81 files in other folders)
