[tool.poetry]
name = "zdppy_api"
version = "0.1.1"
description = ""
authors = ["zhangdapeng520 <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
uvicorn = "^0.17.6"
anyio = "^3.6.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
